# cherrypie

./: .gitignore  Cargo.toml  README.md  cherrypie.service  install.py
src/: config.rs  daemon.rs  lib.rs  main.rs  rules.rs
src/backend/: mod.rs  x11.rs
tests/: config.rs  rules.rs
